@@ -161,6 +161,7 @@ Note that, each object should have unique <ObjectName>.
      * RatioYminPostFit : if set, it will specify a the min of the range of the ratio plots, for post-fit only 
      * CustomAsimov     : if set, the workspace will be created with an AsimovData built according to Sample->AsimovReplacementFor option (see below) instead of data
      * RandomPOISeed    : if set to a >= 0 number, the signal sample(s) to which the POI is assigned get scaled by a random number generated statrging from this seed, just before the ws creation; if the same seed is used in the cofig, post-fit plots will show consistent results (i.e. before post-fit drawing the POI is scaled by the same number)
+     * GetChi2          : if set to TRUE, for pre- and post-fit plots the extended chi2 test is done, and results are printed on the screen for each plot when running d and/or p
      
   * Fit:
      * FitType          : can be SPLUSB (default) or BONLY to fit under the s+b or the b-only hypothesis
